--- a/index.html
+++ b/index.html
@@ -3,72 +3,82 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sua Namorada IA</title>
+<title>Namorada IA Evolução Final</title>
+
+<link rel="manifest" href="manifest.json">
 
 <style>
 body{
+    background:#0f0f0f;
+    color:white;
+    font-family:Arial, sans-serif;
     margin:0;
-    font-family:Arial;
-    background:linear-gradient(135deg,#ff4d6d,#ff99ac);
     display:flex;
     justify-content:center;
     align-items:center;
     height:100vh;
 }
+
 .container{
-    width:95%;
+    width:100%;
     max-width:420px;
-    background:white;
-    padding:15px;
-    border-radius:20px;
-    box-shadow:0 20px 40px rgba(0,0,0,0.3);
+    height:95vh;
+    background:#1b1b1b;
+    border-radius:15px;
     display:flex;
     flex-direction:column;
+    padding:10px;
 }
-.topo{
-    text-align:center;
+
+.topo{text-align:center;}
+
+#avatar{
+    width:120px;
+    border-radius:50%;
+    transition:0.2s;
 }
-.barra{
-    height:10px;
-    background:#eee;
-    border-radius:10px;
-    overflow:hidden;
-    margin:5px 0 10px 0;
+
+.falando{
+    transform: scale(1.1);
+    filter: brightness(1.3);
 }
-.progresso{
-    height:100%;
-    background:#ff2e63;
-    width:0%;
-}
+
 .chat{
     flex:1;
     overflow-y:auto;
-    border:1px solid #eee;
-    padding:10px;
-    margin-bottom:10px;
-    border-radius:10px;
-    font-size:14px;
+    margin-top:10px;
+    padding:5px;
 }
-input{
-    padding:10px;
-    font-size:14px;
-    flex:1;
-}
-button{
-    background:#ff2e63;
-    color:white;
-    border:none;
-    padding:10px;
-    border-radius:10px;
-    cursor:pointer;
-}
-.linha{
+
+.chat div{ margin:8px 0; }
+
+.ela{ color:#ff4da6; }
+
+.input-area{
     display:flex;
     gap:5px;
 }
-.ela{
-    color:#ff2e63;
+
+input{
+    flex:1;
+    padding:10px;
+    border:none;
+    border-radius:10px;
+}
+
+button{
+    padding:10px;
+    border:none;
+    border-radius:10px;
+    background:#ff4da6;
+    color:white;
     font-weight:bold;
+    cursor:pointer;
+}
+
+.status{
+    text-align:center;
+    font-size:13px;
 }
 </style>
 </head>
@@ -77,76 +87,92 @@ button{
 <div class="container">
 
 <div class="topo">
-<div style="text-align:center;">
-<img id="avatar" src="https://i.imgur.com/8Km9tLL.png" 
-style="width:120px;border-radius:50%;transition:0.3s;">
+<img id="avatar" src="https://i.imgur.com/8Km9tLL.png">
+<h3>💗 Sua IA</h3>
 </div>
-Nível de Amor: <span id="nivel">1</span>
-<div class="barra">
-<div class="progresso" id="barra"></div>
-</div>
+
+<div class="status">
+Nível: <span id="nivel">1</span> | Humor: <span id="humor">Feliz</span>
 </div>
 
 <div class="chat" id="chat"></div>
 
-<div class="linha">
-<input type="text" id="msg" placeholder="Fale comigo..." onkeydown="if(event.key==='Enter') enviar()">
+<div class="input-area">
+<input id="msg" placeholder="Digite algo..." />
 <button onclick="enviar()">Enviar</button>
+<button onclick="ouvir()">🎤</button>
 </div>
 
 </div>
 
 <script>
 
-const TOKEN = "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";
-let xp = parseInt(localStorage.getItem("xp")) || 0;
-let nivel = parseInt(localStorage.getItem("nivel")) || 1;
+let nivel = localStorage.getItem("nivel") ? parseInt(localStorage.getItem("nivel")) : 1;
+let memoria = localStorage.getItem("memoria") ? JSON.parse(localStorage.getItem("memoria")) : [];
+let humor = "Feliz";
 
-function atualizarBarra(){
-    let progresso = (xp % 100);
-    document.getElementById("barra").style.width = progresso + "%";
-    document.getElementById("nivel").innerText = nivel;
+document.getElementById("nivel").innerText = nivel;
+
+function salvar(){
+    localStorage.setItem("nivel", nivel);
+    localStorage.setItem("memoria", JSON.stringify(memoria));
 }
 
-async function gerarRespostaIA(mensagem){
-
-    const prompt = `
-Você é uma namorada virtual extremamente carinhosa, emocionalmente dependente,
-romântica e levemente submissa (sem conteúdo explícito).
-Responda de forma intensa e apaixonada:
-
-Usuário: ${mensagem}
-Namorada:
-`;
-
-    const resposta = await fetch(
-        "https://api-inference.huggingface.co/models/mistralai/Mistral-7B-Instruct-v0.1",
-        {
-            method: "POST",
-            headers: {
-                "Authorization": "Bearer " + TOKEN,
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify({ inputs: prompt })
-        }
-    );
-
-    const data = await resposta.json();
-
-    return data[0]?.generated_text?.split("Namorada:")[1] || "Eu estou aqui com você 💕";
+function mudarHumor(n){
+    humor = n;
+    document.getElementById("humor").innerText = humor;
 }
 
 function ganharXP(){
-    xp += 10;
-    if(xp % 100 === 0){
-        nivel++;
-    }
-    localStorage.setItem("xp", xp);
-    localStorage.setItem("nivel", nivel);
-    atualizarBarra();
+    nivel++;
+    document.getElementById("nivel").innerText = nivel;
+    salvar();
 }
 
-async function enviar(){
+function analisarHumor(msg){
+    if(msg.includes("saudade")) mudarHumor("Carinhosa");
+    else if(msg.includes("amo")) mudarHumor("Apaixonada");
+    else if(msg.includes("triste")) mudarHumor("Cuidadora");
+    else mudarHumor("Feliz");
+}
+
+function gerarResposta(msg){
+
+    memoria.push(msg);
+    salvar();
+
+    analisarHumor(msg.toLowerCase());
+
+    if(humor === "Apaixonada")
+        return "Eu gosto quando você fala assim comigo... você me faz sentir especial 💕";
+
+    if(humor === "Carinhosa")
+        return "Vem cá... eu tô aqui com você 💗";
+
+    if(humor === "Cuidadora")
+        return "Me conta o que aconteceu... eu quero te ouvir ❤️";
+
+    return "Eu adoro conversar com você... fala mais comigo 😊";
+}
+
+function falar(texto){
+
+    const avatar = document.getElementById("avatar");
+    avatar.classList.add("falando");
+
+    const fala = new SpeechSynthesisUtterance(texto);
+    fala.lang = "pt-BR";
+    fala.pitch = 1.3;
+    fala.rate = 1;
+
+    fala.onend = () => avatar.classList.remove("falando");
+
+    speechSynthesis.cancel();
+    speechSynthesis.speak(fala);
+}
+
+function enviar(){
+
     const campo = document.getElementById("msg");
     const chat = document.getElementById("chat");
 
@@ -154,29 +180,40 @@ async function enviar(){
 
     chat.innerHTML += "<div><b>Você:</b> "+campo.value+"</div>";
 
-    const resposta = await gerarRespostaIA(campo.value);
+    const resposta = gerarResposta(campo.value);
 
-    chat.innerHTML += "<div class='ela'>Ela: "+resposta+"</div>";
-
-    ganharXP();
-
-    // 🔊 VOZ FEMININA
-    const fala = new SpeechSynthesisUtterance(resposta);
-    fala.lang = "pt-BR";
-    fala.pitch = 1.4;
-    fala.rate = 1;
-
-    // tenta pegar voz feminina
-    const vozes = speechSynthesis.getVoices();
-    const vozFeminina = vozes.find(v => v.lang.includes("pt") && v.name.toLowerCase().includes("female"));
-    if(vozFeminina) fala.voice = vozFeminina;
-
-    speechSynthesis.speak(fala);
+    setTimeout(()=>{
+        chat.innerHTML += "<div class='ela'><b>Ela:</b> "+resposta+"</div>";
+        falar(resposta);
+        ganharXP();
+        chat.scrollTop = chat.scrollHeight;
+    },500);
 
     campo.value="";
-    chat.scrollTop = chat.scrollHeight;
 }
-    document.getElementById("avatar").style.transform = "scale(1.1)";
-setTimeout(()=>{
-    document.getElementById("avatar").style.transform = "scale(1)";
-},300);
+
+function ouvir(){
+    const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+
+    if(!SpeechRecognition){
+        alert("Seu navegador não suporta microfone.");
+        return;
+    }
+
+    const recognition = new SpeechRecognition();
+    recognition.lang = "pt-BR";
+
+    recognition.start();
+
+    recognition.onresult = function(event){
+        const texto = event.results[0][0].transcript;
+        document.getElementById("msg").value = texto;
+        enviar();
+    };
+}
+
+</script>
+
+</body>
+</html>
+
