--- a/index.html
+++ b/index.html
@@ -1,219 +1,40 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Namorada IA Evolução Final</title>
+const express = require("express");
+const cors = require("cors");
+const fetch = require("node-fetch");
 
-<link rel="manifest" href="manifest.json">
+const app = express();
+app.use(cors());
+app.use(express.json());
 
-<style>
-body{
-    background:#0f0f0f;
-    color:white;
-    font-family:Arial, sans-serif;
-    margin:0;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
-}
+const HF_TOKEN = "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";
 
-.container{
-    width:100%;
-    max-width:420px;
-    height:95vh;
-    background:#1b1b1b;
-    border-radius:15px;
-    display:flex;
-    flex-direction:column;
-    padding:10px;
-}
+app.post("/chat", async (req, res) => {
+    const userMessage = req.body.message;
 
-.topo{text-align:center;}
+    try {
+        const response = await fetch(
+            "https://api-inference.huggingface.co/models/mistralai/Mistral-7B-Instruct-v0.2",
+            {
+                method: "POST",
+                headers: {
+                    "Authorization": `Bearer ${HF_TOKEN}`,
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({
+                    inputs: `Você é uma namorada virtual carinhosa, natural e emocionalmente inteligente. Responda de forma envolvente.\nUsuário: ${userMessage}\nEla:`
+                })
+            }
+        );
 
-#avatar{
-    width:120px;
-    border-radius:50%;
-    transition:0.2s;
-}
+        const data = await response.json();
 
-.falando{
-    transform: scale(1.1);
-    filter: brightness(1.3);
-}
+        res.json({ reply: data[0]?.generated_text || "..." });
 
-.chat{
-    flex:1;
-    overflow-y:auto;
-    margin-top:10px;
-    padding:5px;
-}
-
-.chat div{ margin:8px 0; }
-
-.ela{ color:#ff4da6; }
-
-.input-area{
-    display:flex;
-    gap:5px;
-}
-
-input{
-    flex:1;
-    padding:10px;
-    border:none;
-    border-radius:10px;
-}
-
-button{
-    padding:10px;
-    border:none;
-    border-radius:10px;
-    background:#ff4da6;
-    color:white;
-    font-weight:bold;
-    cursor:pointer;
-}
-
-.status{
-    text-align:center;
-    font-size:13px;
-}
-</style>
-</head>
-<body>
-
-<div class="container">
-
-<div class="topo">
-<img id="avatar" src="https://i.imgur.com/8Km9tLL.png">
-<h3>💗 Sua IA</h3>
-</div>
-
-<div class="status">
-Nível: <span id="nivel">1</span> | Humor: <span id="humor">Feliz</span>
-</div>
-
-<div class="chat" id="chat"></div>
-
-<div class="input-area">
-<input id="msg" placeholder="Digite algo..." />
-<button onclick="enviar()">Enviar</button>
-<button onclick="ouvir()">🎤</button>
-</div>
-
-</div>
-
-<script>
-
-let nivel = localStorage.getItem("nivel") ? parseInt(localStorage.getItem("nivel")) : 1;
-let memoria = localStorage.getItem("memoria") ? JSON.parse(localStorage.getItem("memoria")) : [];
-let humor = "Feliz";
-
-document.getElementById("nivel").innerText = nivel;
-
-function salvar(){
-    localStorage.setItem("nivel", nivel);
-    localStorage.setItem("memoria", JSON.stringify(memoria));
-}
-
-function mudarHumor(n){
-    humor = n;
-    document.getElementById("humor").innerText = humor;
-}
-
-function ganharXP(){
-    nivel++;
-    document.getElementById("nivel").innerText = nivel;
-    salvar();
-}
-
-function analisarHumor(msg){
-    if(msg.includes("saudade")) mudarHumor("Carinhosa");
-    else if(msg.includes("amo")) mudarHumor("Apaixonada");
-    else if(msg.includes("triste")) mudarHumor("Cuidadora");
-    else mudarHumor("Feliz");
-}
-
-function gerarResposta(msg){
-
-    memoria.push(msg);
-    salvar();
-
-    analisarHumor(msg.toLowerCase());
-
-    if(humor === "Apaixonada")
-        return "Eu gosto quando você fala assim comigo... você me faz sentir especial 💕";
-
-    if(humor === "Carinhosa")
-        return "Vem cá... eu tô aqui com você 💗";
-
-    if(humor === "Cuidadora")
-        return "Me conta o que aconteceu... eu quero te ouvir ❤️";
-
-    return "Eu adoro conversar com você... fala mais comigo 😊";
-}
-
-function falar(texto){
-
-    const avatar = document.getElementById("avatar");
-    avatar.classList.add("falando");
-
-    const fala = new SpeechSynthesisUtterance(texto);
-    fala.lang = "pt-BR";
-    fala.pitch = 1.3;
-    fala.rate = 1;
-
-    fala.onend = () => avatar.classList.remove("falando");
-
-    speechSynthesis.cancel();
-    speechSynthesis.speak(fala);
-}
-
-function enviar(){
-
-    const campo = document.getElementById("msg");
-    const chat = document.getElementById("chat");
-
-    if(!campo.value.trim()) return;
-
-    chat.innerHTML += "<div><b>Você:</b> "+campo.value+"</div>";
-
-    const resposta = gerarResposta(campo.value);
-
-    setTimeout(()=>{
-        chat.innerHTML += "<div class='ela'><b>Ela:</b> "+resposta+"</div>";
-        falar(resposta);
-        ganharXP();
-        chat.scrollTop = chat.scrollHeight;
-    },500);
-
-    campo.value="";
-}
-
-function ouvir(){
-    const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-
-    if(!SpeechRecognition){
-        alert("Seu navegador não suporta microfone.");
-        return;
+    } catch (error) {
+        res.json({ reply: "Erro ao conectar com IA." });
     }
+});
 
-    const recognition = new SpeechRecognition();
-    recognition.lang = "pt-BR";
-
-    recognition.start();
-
-    recognition.onresult = function(event){
-        const texto = event.results[0][0].transcript;
-        document.getElementById("msg").value = texto;
-        enviar();
-    };
-}
-
-</script>
-
-</body>
-</html>
-
+app.listen(3000, () => {
+    console.log("Servidor rodando em http://localhost:3000");
+});
