--- a/index.html
+++ b/index.html
@@ -1,40 +1,39 @@
-const express = require("express");
-const cors = require("cors");
-const fetch = require("node-fetch");
+UGGINGFACE_TOKEN = "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"
+MODEL_CHAT = "gpt2"  # ou qualquer modelo Hugging Face de chat
+MODEL_TTS = "facebook/tts_transformer-es-css10"  # exemplo de TTS em espanhol/inglês
+AVATAR_URL = "https://i.imgur.com/4AiXzf8.png"  # link de avatar
 
-const app = express();
-app.use(cors());
-app.use(express.json());
+# ================= FUNÇÃO CHAT =================
+def ask_ai(prompt):
+    headers = {"Authorization": f"Bearer {HUGGINGFACE_TOKEN}"}
+    payload = {"inputs": prompt, "options": {"use_cache": False}}
+    response = requests.post(
+        f"https://api-inference.huggingface.co/models/{MODEL_CHAT}",
+        headers=headers,
+        json=payload
+    )
+    result = response.json()
+    return result[0]['generated_text'].replace(prompt, "").strip()
 
-const HF_TOKEN = "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";
+# ================= FUNÇÃO TTS =================
+def speak(text):
+    headers = {"Authorization": f"Bearer {HUGGINGFACE_TOKEN}"}
+    payload = {"inputs": text}
+    response = requests.post(
+        f"https://api-inference.huggingface.co/models/{MODEL_TTS}",
+        headers=headers,
+        json=payload
+    )
+    # Salva o áudio temporariamente e toca no browser
+    with tempfile.NamedTemporaryFile(delete=False, suffix=".mp3") as f:
+        f.write(response.content)
+        webbrowser.open(f.name)
 
-app.post("/chat", async (req, res) => {
-    const userMessage = req.body.message;
+# ================= INTERAÇÃO =================
+print(f"Avatar da sua namorada IA: {AVATAR_URL}\n")
 
-    try {
-        const response = await fetch(
-            "https://api-inference.huggingface.co/models/mistralai/Mistral-7B-Instruct-v0.2",
-            {
-                method: "POST",
-                headers: {
-                    "Authorization": `Bearer ${HF_TOKEN}`,
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({
-                    inputs: `Você é uma namorada virtual carinhosa, natural e emocionalmente inteligente. Responda de forma envolvente.\nUsuário: ${userMessage}\nEla:`
-                })
-            }
-        );
-
-        const data = await response.json();
-
-        res.json({ reply: data[0]?.generated_text || "..." });
-
-    } catch (error) {
-        res.json({ reply: "Erro ao conectar com IA." });
-    }
-});
-
-app.listen(3000, () => {
-    console.log("Servidor rodando em http://localhost:3000");
-});
+while True:
+    user_input = input("Você: ")
+    ai_response = ask_ai(user_input)
+    print(f"IA: {ai_response}")
+    speak(ai_response)
